2005-04-18 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b5

	* Change: Added new parameter to makeIconMenu for alignment

	* Change: Use IconMenu in view_photo for adminText

	* Change: Make eCards an album option. (needs album version bump)

	* Fix: Added ecard_form.php to allowed include list.

	* Change: Little layout, text and css and html validation for ecard_form.php

	* Fix: ecards opened popup with environment when Gallery is embedded.

2005-04-18 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b4

	* Fix: removed little debug code.

2005-04-17 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b3

	* Fix: invalid css in standalone css and some skins. (Thanks to pixelpoet)

	* Change: Added cellpadding="0" cellspacing="0" to starting tables in html_wrap/*.header.default

2005-04-16 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b2

	* Fix: HTML validation in view_photo.php, login.php

	* Change: Added parameter to drawSelect for pretty printing.

	* Change: Album properties are displayed in tabs.

	* CHANGE: data structure of print services.
		  reconfig forced and album version bumped.

	  Note: code not finished ! Previous Values from config for print services not used.

	* Change: eCard template changes 

	* Change: Modified eCard feature... 

	* Change: Show Albumnames in pulldown for reorder album.

	* New: Added eCard Feature. (not completed yet.)

	* New: Added more placeholders in Welcome Msg. Used Patch #847436 as inspiration.

	* Change: Inform user when display of exifdate is enabled, but nothing found.
	  (to avoid confusion)

	* Change: Added Patch #842580 from Kennichi Uehara 'email transfer encoding to base64'

2005-04-14  Jay Rossiter <cryptographite@users.sf.net>  1.5.1-cvs-b1

	* Fix: Address PHP5 behavior change to unsetting string values

2005-04-13  Chris Kelly <ckdake@users.sf.net>  1.5

	* 1.5 Release
	
2005-04-13  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC4-cvs-b10

	* Change: New breadcrumb needed updating in slideshow and view_captions
