@@ -3797,7 +3797,10 @@ function send_ecard($ecard,$ecard_HTML_data,$ecard_PLAIN_data) {
     }
     $ecard_mail->setHtml($ecard_HTML_data, $ecard_PLAIN_data,'./');
     $ecard_mail->setFrom($ecard["name_sender"].'<'.$ecard["email_sender"].'>');
-    $ecard_mail->setSubject('You have an E-C@rd from '.$ecard["name_sender"]);
+    if (empty($ecard['subject'])) {
+	$ecard['subject'] = sprintf(_("%s sent you an E-C@rd."), $ecard["name_sender"]);
+    }
+    $ecard_mail->setSubject($ecard['subject']);
     $ecard_mail->setReturnPath($ecard["email_sender"]);
 	
     $result = $ecard_mail->send(array($ecard["email_recepient"]));
