@@ -1,3 +1,11 @@
+2005-04-19 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b6
+
+	* Change: Use Name and Email of logged in users as default for Sender in ecards.
+
+	* Change: Added Subject line for ecards.
+
+	* Fix: ecard enable/disable setting was not set for nested albums.
+
 2005-04-18 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b5
 
 	* Change: Added new parameter to makeIconMenu for alignment
